updates services grid box heights based on content, fixes nav item colour changes on scroll, adds new header logo, hero positioning adjustment to accommodate overlapping page content container

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -113,42 +113,57 @@
 
 /* Typography */
 h1,
+.h1,
 h2,
+.h2,
 h3,
-h4 {
+.h3,
+h4,
+.h4,
+h5,
+.h5 {
   font-family: $heading-font;
 }
 
-h1 {
-  font-size: 2.75rem;
+h1,
+.h1 {
+  font-size: 3rem;
 
   @media (min-width: $breakpoint-md) {
     font-size: 4rem;
   }
 }
 
-h2 {
-  font-size: 2.25rem;
+h2,
+.h2 {
+  font-size: 2rem;
 
   @media (min-width: $breakpoint-md) {
     font-size: 3rem;
   }
 }
 
-h3 {
-  font-size: 1.5rem;
+h3,
+.h3 {
+  font-size: 1.25rem;
+
+  @media (min-width: $breakpoint-md) {
+    font-size: 2.25rem;
+  }
+}
+
+h4,
+.h4 {
+  font-size: 1rem;
 
   @media (min-width: $breakpoint-md) {
     font-size: 2rem;
   }
 }
 
-h4 {
-  font-size: 1.25rem;
-
-  @media (min-width: $breakpoint-md) {
-    font-size: 1.5rem;
-  }
+h5,
+.h5 {
+  font-size: 1rem;
 }
 
 p {
