--- a/src/styles/components/_home-services.scss
+++ b/src/styles/components/_home-services.scss
@@ -21,6 +21,7 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        height: 100%;
         padding: 2rem;
         background: $colour-dark-blue;
         border-radius: $border-radius-sm;
