--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -9,7 +9,7 @@
   right: -99999px;
   width: 0;
   height: 0;
-  background: $colour-beige;
+  // background: $colour-beige;
   transition: $transition-all;
 
   @media (min-width: $breakpoint-md) {
@@ -34,7 +34,8 @@
     }
 
     h3 {
-      color: $colour-dark-blue !important;
+      color: $white;
+      // color: $colour-dark-blue !important;
     }
   }
 
@@ -64,7 +65,8 @@
       padding: 12px 16px 8px;
       background: transparent;
       transition: all 0.3s ease-in-out;
-      color: $colour-dark-blue;
+      color: $white;
+      // color: $colour-dark-blue;
       text-transform: uppercase;
     }
 
@@ -78,6 +80,9 @@
   }
 
   .social-links {
+    a svg {
+      color: $white;
+    }
     a:hover {
       svg {
         fill: $secondary-accent-light !important;
@@ -116,11 +121,19 @@
   svg {
     width: 24px;
     height: auto;
-    color: $colour-dark-blue;
+    color: $white;
   }
 }
 
 // Mobile Nav Open
+.header-content:has(.main-nav.active) {
+  .hamburger {
+    svg {
+      fill: $colour-dark-blue;
+    }
+  }
+}
+
 .main-nav.active {
   display: flex;
   top: 0;
@@ -129,7 +142,7 @@
   height: 100vh;
   background: rgba(255, 255, 255, 0.9);
   backdrop-filter: blur(5px);
-  transition: all 0.3s ease-in-out;
+  transition: $transition-all !important;
 
   @media (min-width: $breakpoint-md) {
     height: auto;
@@ -146,6 +159,10 @@
     display: none;
   }
 
+  h3 {
+    color: $colour-dark-blue;
+  }
+
   ul li a {
     color: $colour-dark-blue;
   }
@@ -158,5 +175,5 @@
 }
 
 .main-nav.false {
-  transition: $transition-all;
+  transition: $transition-all !important;
 }
