--- a/src/styles/components/_social-links.scss
+++ b/src/styles/components/_social-links.scss
@@ -9,7 +9,8 @@
       width: 20px;
       height: auto;
       // fill: $colour-beige;
-      fill: $colour-dark-blue;
+      fill: $white;
+      // fill: $colour-dark-blue;
       transition: all 0.3s ease-in-out;
     }
   }
