--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -9,7 +9,8 @@
   height: 72px;
   z-index: 10;
   color: transparent;
-  background: $white;
+  // background: $white;
+  background: transparent;
   transition: all 0.3s ease-in-out;
 
   @media (min-width: $breakpoint-md) {
@@ -38,7 +39,8 @@
     }
 
     h3 {
-      color: $colour-dark-blue;
+      // color: $colour-dark-blue;
+      color: $white;
       margin: 0;
       line-height: 0;
       font-size: 1.5rem;
@@ -56,14 +58,32 @@
 // Header Color Change on Scroll
 .header-bg-color {
   box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.1);
-  background: #fefefe;
+  background: $white;
   transition: all 0.3s ease-in-out;
 
-  &.main-nav.active {
-    .hamburger {
-      svg {
-        fill: $colour-dark-blue;
-      }
+  .header-logo h3 {
+    color: $colour-dark-blue !important;
+  }
+
+  .main-nav ul li a {
+    color: $colour-dark-blue;
+  }
+
+  .social-links a svg {
+    fill: $colour-dark-blue;
+  }
+
+  .hamburger {
+    svg {
+      fill: $colour-dark-blue;
     }
   }
+
+  // &.main-nav.active {
+  //   .hamburger {
+  //     svg {
+  //       fill: $colour-dark-blue;
+  //     }
+  //   }
+  // }
 }
